--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </h1>
 
                         <p class="sub-title">
-                            Stay Tuned
+                            Stay Tuned.
                         </p>
                     </div>
                 </li>
